--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Countries</title>
+    <title>Get info about countries</title>
     <link rel="icon" type="image/x-icon" href="images/countries.png" />
     <link rel="stylesheet" href="reset.css" media="screen" />
     <link rel="stylesheet" href="style.css" />
